--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Densest Subgraph Discovery
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
-baseurl: "/DAAWebPage" # the subpath of your site, e.g. /blog
+baseurl: "/DAAWebpage" # the subpath of your site, e.g. /blog
 url: "https://advsinha17.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username: advsinha17
